plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.1'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'springweb'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies { // start.spring.io
	// 의존성( dependencies ) { } 안에 프로젝트내 추가할 라이브러리 코드 -> 자동으로 라이브러리 설치
	// 1. springboot
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	// 2. MYSQL jdbc
	runtimeOnly 'com.mysql:mysql-connector-j'
	// 3. 롬복 
	compileOnly 'org.projectlombok:lombok'
  	annotationProcessor 'org.projectlombok:lombok'
	// 4. JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
